--- a/src/assets/styles/mixins/button-transparent.scss
+++ b/src/assets/styles/mixins/button-transparent.scss
@@ -16,6 +16,13 @@
       }
     }
   }
+  @include screen(desktop) {
+    &:hover {
+      span {
+        color: $orange-500;
+      }
+    }
+  }
   span {
     font-size: 16px;
     font-weight: 600;
