--- a/src/assets/styles/mixins/resort-card.scss
+++ b/src/assets/styles/mixins/resort-card.scss
@@ -8,6 +8,31 @@
     border-radius: 10px;
     overflow: hidden;
   }
+  @include screen(laptop) {
+    aspect-ratio: 1 / 1;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  @include screen(desktop) {
+    aspect-ratio: 1 / 1;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+
+  &__top {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    @include screen(laptop) {
+      top: 30px;
+      left: 30px;
+    }
+    @include screen(desktop) {
+      top: 30px;
+      left: 30px;
+    }
+  }
+
   &__bg {
     position: absolute;
     width: 100%;
@@ -33,10 +58,14 @@
     padding: 20px 70px 20px 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     @include screen(laptop) {
       padding: 30px 70px 30px 30px;
     }
+    @include screen(desktop) {
+      padding: 30px 70px 30px 30px;
+    }
+
   }
 
   &__cost {
@@ -71,6 +100,10 @@
       font-size: 24px;
       line-height: 24px;
     }
+    @include screen(desktop) {
+      font-size: 24px;
+      line-height: 24px;
+    }
   }
 
   &__link {
@@ -81,6 +114,13 @@
       }
     }
     @include screen(laptop) {
+      &:hover {
+        .resort-card__title {
+          color: $orange-500;
+        }
+      }
+    }
+    @include screen(desktop) {
       &:hover {
         .resort-card__title {
           color: $orange-500;
@@ -98,11 +138,13 @@
     @include screen(laptop) {
       margin-top: 20px;
     }
+    @include screen(desktop) {
+      margin-top: 20px;
+    }
   }
 
   &__item {
     color: $white;
-    font-family: 'Tilda Sans VF';
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
@@ -118,6 +160,14 @@
         color: $orange-500;
       }
     }
+    @include screen(desktop) {
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 18px;
+      &:hover {
+        color: $orange-500;
+      }
+    }
   }
 
   &--mini {
@@ -126,20 +176,36 @@
       min-height: 200px;
       aspect-ratio: auto;
     }
+    @include screen(laptop) {
+      min-height: 200px;
+      aspect-ratio: auto;
+    }
+    @include screen(desktop) {
+      min-height: 200px;
+      aspect-ratio: auto;
+    }
     .resort-card {
       &__container {
-        justify-content: flex-end;
         padding: 20px;
-        @include screen(tablet) {
-          justify-content: space-between;
-        }
         @include screen(laptop) {
+          padding: 30px;
+        }
+        @include screen(desktop) {
           padding: 30px;
         }
       }
       &__cost {
         display: none;
         @include screen(tablet) {
+          display: inline-block;
+        }
+        @include screen(tablet-2x) {
+          display: inline-block;
+        }
+        @include screen(laptop) {
+          display: inline-block;
+        }
+        @include screen(desktop) {
           display: inline-block;
         }
       }
