--- a/src/assets/styles/components/main-about.scss
+++ b/src/assets/styles/components/main-about.scss
@@ -8,6 +8,18 @@
     padding-top: 45px;
     background-image: none;
   }
+  @include screen(laptop) {
+    background-color: $bg-blue;
+    padding-bottom: 90px;
+    padding-top: 45px;
+    background-image: none;
+  }
+  @include screen(desktop) {
+    background-color: $bg-blue;
+    padding-bottom: 90px;
+    padding-top: 45px;
+    background-image: none;
+  }
 
   &__header {
     display: flex;
@@ -15,6 +27,18 @@
     align-items: center;
     .button-transparent {
       padding: 7px 16px;
+    }
+    a {
+      display: none;
+      @include screen(tablet-2x) {
+        display: inline-block;
+      }
+      @include screen(laptop) {
+        display: inline-block;
+      }
+      @include screen(desktop) {
+        display: inline-block;
+      }
     }
   }
 
@@ -27,7 +51,14 @@
     @include screen(tablet-2x) {
       margin-top: 50px;
       grid-template-columns: repeat(3, minmax(0, 1fr));
-
+    }
+    @include screen(laptop) {
+      margin-top: 50px;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+    @include screen(desktop) {
+      margin-top: 50px;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
 
@@ -37,6 +68,10 @@
       width: 36px;
       height: 36px;
       @include screen(laptop) {
+        width: 48px;
+        height: 48px;
+      }
+      @include screen(desktop) {
         width: 48px;
         height: 48px;
       }
@@ -54,15 +89,25 @@
       line-height: 24px;
       margin-top: 24px;
     }
+    @include screen(desktop) {
+      font-size: 24px;
+      line-height: 24px;
+      margin-top: 24px;
+    }
   }
 
   &__text {
     margin-top: 16px;
-    font-family: 'Tilda Sans VF';
     font-size: 14px;
     font-weight: 400;
     line-height: 16px;
+    color: $black-300;
     @include screen(laptop) {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+    }
+    @include screen(desktop) {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
@@ -79,6 +124,11 @@
           color: $orange-500;
         }
       }
+      @include screen(desktop) {
+        &:hover {
+          color: $orange-500;
+        }
+      }
     }
   }
 
@@ -89,9 +139,24 @@
     @include screen(tablet-2x) {
       display: none;
     }
+    @include screen(laptop) {
+      display: none;
+    }
+    @include screen(desktop) {
+      display: none;
+    }
     a {
       width: 100%;
       @include screen(tablet) {
+        width: max-content;
+      }
+      @include screen(tablet-2x) {
+        width: max-content;
+      }
+      @include screen(laptop) {
+        width: max-content;
+      }
+      @include screen(desktop) {
         width: max-content;
       }
     }
