--- a/src/assets/styles/components/main-promo.scss
+++ b/src/assets/styles/components/main-promo.scss
@@ -6,6 +6,16 @@
     padding-bottom: 45px;
     background-color: $bg-blue;
   }
+  @include screen(laptop) {
+    padding-top: 20px;
+    padding-bottom: 45px;
+    background-color: $bg-blue;
+  }
+  @include screen(desktop) {
+    padding-top: 20px;
+    padding-bottom: 45px;
+    background-color: $bg-blue;
+  }
 
   &__wrapper {
     position: relative;
@@ -18,6 +28,14 @@
     position: relative;
     height: 230px;
     @include screen(tablet-2x) {
+      border-radius: 0;
+      height: 300px;
+    }
+    @include screen(laptop) {
+      border-radius: 0;
+      height: 300px;
+    }
+    @include screen(desktop) {
       border-radius: 0;
       height: 300px;
     }
@@ -63,6 +81,12 @@
     @include screen(tablet-2x) {
       padding: 10.5px 20px;
     }
+    @include screen(laptop) {
+      padding: 10.5px 20px;
+    }
+    @include screen(desktop) {
+      padding: 10.5px 20px;
+    }
     span {
       color: $white;
       font-size: 16px;
@@ -79,6 +103,14 @@
       width: 68px;
       height: 70px;
     }
+    @include screen(laptop) {
+      width: 68px;
+      height: 70px;
+    }
+    @include screen(desktop) {
+      width: 68px;
+      height: 70px;
+    }
     img {
       object-fit: contain;
       width: 100%;
@@ -92,6 +124,12 @@
     border-radius: 7px;
     max-width: max-content;
     @include screen(tablet-2x) {
+      padding: 10.5px 20px;
+    }
+    @include screen(laptop) {
+      padding: 10.5px 20px;
+    }
+    @include screen(desktop) {
       padding: 10.5px 20px;
     }
     span {
@@ -112,6 +150,12 @@
     @include screen(tablet-2x) {
       padding: 30px;
     }
+    @include screen(laptop) {
+      padding: 30px;
+    }
+    @include screen(desktop) {
+      padding: 30px;
+    }
   }
 
   &__title {
@@ -121,6 +165,11 @@
     letter-spacing: -0.01em;
     color: $white;
     @include screen(laptop) {
+      font-size: 30px;
+      line-height: 30px;
+      letter-spacing: -0.02em;
+    }
+    @include screen(desktop) {
       font-size: 30px;
       line-height: 30px;
       letter-spacing: -0.02em;
@@ -143,6 +192,16 @@
       font-size: 16px;
       line-height: 20px;
     }
+    @include screen(laptop) {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 20px;
+    }
+    @include screen(desktop) {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 20px;
+    }
     &--black {
       color: $black-400;
     }
@@ -155,9 +214,24 @@
     @include screen(tablet-2x) {
       display: none;
     }
+    @include screen(laptop) {
+      display: none;
+    }
+    @include screen(desktop) {
+      display: none;
+    }
     a {
       width: 100%;
       @include screen(tablet) {
+        width: max-content;
+      }
+      @include screen(tablet-2x) {
+        width: max-content;
+      }
+      @include screen(laptop) {
+        width: max-content;
+      }
+      @include screen(desktop) {
         width: max-content;
       }
     }
@@ -197,6 +271,20 @@
           justify-content: center;
         }
         @include screen(laptop) {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          &:hover {
+            background-color: $blue-500;
+            svg {
+              stroke: $white;
+            }
+          }
+        }
+        @include screen(desktop) {
+          display: flex;
+          align-items: center;
+          justify-content: center;
           &:hover {
             background-color: $blue-500;
             svg {
@@ -211,11 +299,17 @@
         @include screen(laptop) {
           left: -20px;
         }
+        @include screen(desktop) {
+          left: -20px;
+        }
 
       }
       &-next {
         right: -10px;
         @include screen(laptop) {
+          right: -20px;
+        }
+        @include screen(desktop) {
           right: -20px;
         }
       }
