--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -27,10 +27,15 @@ $black-600: #0D192B;
 $cian-400: #10A2EC;
 
 $blue-border: #386AE040;
+$blue-border-light: #2768C926;
+
 $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
 $blue-600: #3663CB;
+$blue-700: #2768C9;
+
+
 
 $gray-400: #A1ABB9;
 
