--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -18,3 +18,4 @@ block content
     include ./components/main-resorts
     include ./components/main-procedures
     include ./components/main-about
+    include ./components/main-houses
