--- a/src/assets/styles/utils/mixins.scss
+++ b/src/assets/styles/utils/mixins.scss
@@ -6,29 +6,31 @@
   }
 
   @if $breakpoint == laptop {
-    @media only screen and (min-width: 1280px) {
+    @media (min-width: 1280px) and (max-width: 1535px) {
       @content;
     }
   }
 
   @if $breakpoint == tablet-2x {
-    @media only screen and (min-width: 1024px) {
+    @media (min-width: 1024px) and (max-width: 1279px) {
       @content;
     }
   }
 
   @if $breakpoint == tablet {
-    @media only screen and (min-width: 768px) {
+    @media (min-width: 768px) and (max-width: 1023px) {
       @content;
     }
   }
 
   @if $breakpoint == mobile {
-    @media only screen and (min-width: 640px) {
+    @media (min-width: 640px) and (max-width: 767px) {
       @content;
     }
   }
 }
+
+// ______________________
 
 @mixin max-screen($breakpoint) {
   @if $breakpoint == desktop {
