--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -72,6 +72,10 @@ html(lang="ru")
     
     .render
 
+    include ../mixins/resort-card
+    include ../mixins/house-card
+    include ../mixins/button-transparent
+
     include ../components/header
 
     block content
