--- a/src/views/components/main-resorts.pug
+++ b/src/views/components/main-resorts.pug
@@ -1,20 +1,166 @@
-include ../mixins/resort-card
-include ../mixins/button-transparent
-
 section.main-resorts
   .wrapper
     h2 Популярные курорты для отдыха и лечения
-  .wrapper
+  .wide-wrapper
     .main-resorts__wrapper
       .main-resorts__cards
-        +resort-card('', 'true', '/assets/images/main-resorts/mob-1.png', 'resort-1', true, 'От 19 990 ₽', false, '', false, '', 'Краснодарский край', 'Сочи', 'Адлер', 'Анапа', 'Туапсе', 'Геленджик', 'Мацеста')
-        +resort-card('', 'true', '/assets/images/main-resorts/mob-2.png', 'resort-2', false, '', true, 'Скидки до 30%', false, '', 'Крым', 'Ялта', 'Алушта', 'Евпатория', 'Саки', 'ЮБК', 'Гурзуф', 'Мисхор')
-        +resort-card('', 'true', '/assets/images/main-resorts/mob-3.png', 'resort-3', false, '', false, '', false, '', 'КавМинВоды', 'Кисловодск', 'Ессентуки', 'Пятигорск', 'Железноводск')
+        +resort-card(
+          {
+            className: '',
+            image: {
+              src: '/assets/images/main-resorts/mob-1.png',
+              alt: 'resort-1'
+            },
+            price: 'От 19 990 ₽',
+            discount: '',
+            booking: '',
+            title: 'Краснодарский край',
+            locations: [
+              {
+                title: 'Сочи'
+              },
+              {
+                title: 'Адлер'
+              },
+              {
+                title: 'Анапа'
+              },
+              {
+                title: 'Туапсе'
+              },
+              {
+                title: 'Геленджик'
+              },
+              {
+                title: 'Мацеста'
+              },
+            ]
+          }
+        )
+        +resort-card(
+          {
+            className: '',
+            image: {
+              src: '/assets/images/main-resorts/mob-2.png',
+              alt: 'resort-2'
+            },
+            price: '',
+            discount: 'Скидки до 30%',
+            booking: '',
+            title: 'Крым',
+            locations: [
+              {
+                title: 'Ялта'
+              },
+              {
+                title: 'Алушта'
+              },
+              {
+                title: 'Евпатория'
+              },
+              {
+                title: 'Саки'
+              },
+              {
+                title: 'ЮБК'
+              },
+              {
+                title: 'Гурзуф'
+              },
+              {
+                title: 'Мисхор'
+              },
+            ]
+          }
+        )
+        +resort-card(
+          {
+            className: '',
+            image: {
+              src: '/assets/images/main-resorts/mob-3.png',
+              alt: 'resort-3'
+            },
+            price: '',
+            discount: '',
+            booking: '',
+            title: 'КавМинВоды',
+            locations: [
+              {
+                title: 'Кисловодск'
+              },
+              {
+                title: 'Ессентуки'
+              },
+              {
+                title: 'Пятигорск'
+              },
+              {
+                title: 'Железноводск'
+              },
+            ]
+          }
+        )
       .main-resorts__items
-        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-4.png', 'resort-4', false, '', false, '', false, '', 'Абхазия')
-        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-5.png', 'resort-5', false, '', false, '', false, '', 'Белоруссия')
-        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-6.png', 'resort-6', false, '', false, '', false, '', 'Москва и обл.')
-        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-7.png', 'resort-7', false, '', false, '', true, 'Раннее бронирование', 'Алтай')
+        +resort-card(
+          {
+            className: 'resort-card--mini',
+            image: {
+              src: '/assets/images/main-resorts/mob-4.png',
+              alt: 'resort-4'
+            },
+            price: '',
+            discount: '',
+            booking: '',
+            title: 'Абхазия',
+            locations: [
+            ]
+          }
+        )
+        +resort-card(
+          {
+            className: 'resort-card--mini',
+            image: {
+              src: '/assets/images/main-resorts/mob-5.png',
+              alt: 'resort-5'
+            },
+            price: '',
+            discount: '',
+            booking: '',
+            title: 'Белоруссия',
+            locations: [
+            ]
+          }
+        )
+        +resort-card(
+          {
+            className: 'resort-card--mini',
+            image: {
+              src: '/assets/images/main-resorts/mob-6.png',
+              alt: 'resort-6'
+            },
+            price: '',
+            discount: '',
+            booking: '',
+            title: 'Москва и обл.',
+            locations: [
+            ]
+          }
+        )
+        +resort-card(
+          {
+            className: 'resort-card--mini',
+            image: {
+              src: '/assets/images/main-resorts/mob-7.png',
+              alt: 'resort-7'
+            },
+            price: '',
+            discount: '',
+            booking: 'Раннее бронирование',
+            title: 'Алтай',
+            locations: [
+            ]
+          }
+        )
   .wrapper
     ul.main-resorts__list
       li 
